# LosTracking

./: .gitignore  README.md
LosLabel/: CMakeLists.txt
LosLabel/include/FaceDetectionInc/classifier/: lab_boosted_classifier.h  surf_mlp.h
LosLabel/include/FaceDetectionInc/feat/: surf_feature_map.h
LosLabel/include/FaceDetectionInc/io/: surf_mlp_model_reader.h
LosLabel/include/FaceDetectionInc/util/: image_pyramid.h
LosLabel/src/FaceAlignmentSrc/: cfan.cpp  face_alignment.cpp
LosLabel/src/FaceDetectionSrc/: face_detection.cpp  fust.cpp
LosLabel/src/FaceDetectionSrc/classifier/: lab_boosted_classifier.cpp  mlp.cpp  surf_mlp.cpp
LosLabel/src/FaceDetectionSrc/feat/: lab_feature_map.cpp
LosLabel/src/FaceDetectionSrc/io/: surf_mlp_model_reader.cpp
LosLabel/src/FaceDetectionSrc/util/: image_pyramid.cpp  nms.cpp
LosLabel/src/demo/: EyesDetector.cpp  EyesDetector.h  ImageReader.cpp  ImageReader.h  LosLabel.cpp  LosLabel.h  Timer.cpp  Timer.h  main.cpp
SeetaFace/FaceAlignment/: CMakeLists.txt
SeetaFace/FaceAlignment/include/FaceDetectionInc/classifier/: mlp.h
SeetaFace/FaceAlignment/include/FaceDetectionInc/feat/: lab_feature_map.h
SeetaFace/FaceAlignment/include/FaceDetectionInc/io/: lab_boost_model_reader.h
SeetaFace/FaceAlignment/include/FaceDetectionInc/util/: nms.h
SeetaFace/FaceAlignment/src/FaceAlignmentSrc/: cfan.cpp  sift.cpp
SeetaFace/FaceAlignment/src/FaceDetectionSrc/feat/: surf_feature_map.cpp
SeetaFace/FaceAlignment/src/FaceDetectionSrc/io/: lab_boost_model_reader.cpp
SeetaFace/FaceAlignment/src/demo/: LosLabel.cpp  face_alignment_test.cpp  imageReader.cpp  imageReader.h
SeetaFace/FaceDetection/: CMakeLists.txt
SeetaFace/FaceDetection/src/test/: facedetection_test.cpp  imageReader.cpp  imageReader.h
